--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-    "name": "get-window-rect-for-mac",
-    "version": "1.0.6",
-    "description": "electron 通过desktopCapturer.getSources返回的source.id获取桌面窗口坐标",
-    "main": "main.js",
-    "dependencies":{"bindings":"1.5.0","node-addon-api":"3.1.0"},
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/chinaqiao/electron-win-app-rect.git"
-    },
-    "keywords": [
-      "electron"
-    ],
-    "author": "eagle",
-    "license": "ISC",
-    "gypfile": false,
-    "bugs": {
-      "url": "https://github.com/chinaqiao/electron-win-app-rect/issues"
-    },
-    "homepage": "https://github.com/chinaqiao/electron-win-app-rect#readme",
-  }
-  
-
-
-
-
-
+  "name": "get-window-rect-for-mac",
+  "version": "1.0.7",
+  "description": "通过PID返回窗口坐标",
+  "main": "index.js",
+  "dependencies": {
+    "bindings": "1.5.0",
+    "node-addon-api": "3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/letmeNo1/get-window-rect-for-mac.git"
+  },
+  "keywords": [
+    "mac",
+    "rect"
+  ],
+  "author": "hank.huang",
+  "bugs": {
+    "url": "https://github.com/letmeNo1/get-window-rect-for-mac/issues"
+  },
+  "homepage": "https://github.com/letmeNo1/get-window-rect-for-mac",
+  "scripts": {
+    "install": "node-gyp rebuild"
+  },
+  "gypfile": true,
+  "license": "ISC"
+}
