添加PID为0的判断
添加判断，当PID为0时，返回所有窗口的坐标

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "get-window-rect-for-mac",
-  "version": "1.0.7",
+  "name": "get-window-rect-by-pid",
+  "version": "1.0.1",
   "description": "通过PID返回窗口坐标",
   "main": "index.js",
   "dependencies": {
